<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="cz.sedlaj19.autoskola.presentation.ui.activities.InstructorActivity">

    <item
        android:id="@+id/menu_instructor_logout"
        android:orderInCategory="100"
        android:title="@string/logout"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_instructor_add_car"
        android:orderInCategory="100"
        android:title="@string/manage_cars"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_instructor_websites"
        android:orderInCategory="105"
        android:title="@string/website"
        android:showAsAction="never"/>

</menu>
