<?xml version="1.0" encoding="utf-8"?>
<!--<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"-->
    <!--xmlns:tools="http://schemas.android.com/tools"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent"-->
    <!--tools:context="cz.sedlaj19.autoskola.presentation.ui.activities.AddRideActivity">-->

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        tools:context="cz.sedlaj19.autoskola.presentation.ui.activities.AddRideActivity">

        <LinearLayout android:id="@+id/add_ride_progress_wrapper"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:visibility="gone">

            <ProgressBar android:id="@+id/add_ride_progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/creating_ride"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="15dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="18sp"
                android:text="@string/student"/>

            <Spinner android:id="@+id/add_ride_students"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="15dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="18sp"
                android:text="@string/instructor"/>

            <Spinner android:id="@+id/add_ride_instructors"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="15dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="18sp"
                android:text="@string/car"/>

            <Spinner android:id="@+id/add_ride_cars"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView android:id="@+id/add_ride_date_picker"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/enter_date"
                android:textSize="20sp"
                android:gravity="center_vertical"
                android:drawablePadding="10dp"
                android:layout_marginBottom="15dp"
                android:drawableStart="@drawable/ic_event_black_36dp"/>

            <TextView android:id="@+id/add_ride_time_picker"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/enter_time"
                android:textSize="20sp"
                android:gravity="center_vertical"
                android:drawablePadding="10dp"
                android:layout_marginBottom="15dp"
                android:drawableStart="@drawable/ic_access_time_black_36dp"/>

        </LinearLayout>

        <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

            <EditText android:id="@+id/add_ride_notes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/note"/>

        </android.support.design.widget.TextInputLayout>

        <TextView android:id="@+id/add_ride_rides_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <ListView android:id="@+id/add_ride_rides_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

<!--</ScrollView>-->
